@@ -70,6 +70,7 @@
 - fix out of order locking in readmap.
 - include ip address in debug logging.
 - mount using address for DNS round robin host names.
+- reset negative status on cache prune.
 
 03/09/2009 autofs-5.0.5
 -----------------------
